[package]
name = "git-fixup"
version = "0.1.8"
authors = ["Brandon W Maister <quodlibetor@gmail.com>"]
edition = "2021"
default-run = "git-fixup"
repository = "https://github.com/quodlibetor/git-fixup/"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.11", features = ["derive", "env", "wrap_help"] }
console = "0.15.0"
dialoguer = "0.10.1"
git2 = { version = "0.14.4", default_features = false }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
itertools = "0.10.3"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.0.7"
# The preferred Rust toolchain to use in CI (rustup toolchain syntax)
rust-toolchain-version = "1.67.1"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "aarch64-apple-darwin"]
# CI backends to support (see 'cargo dist generate-ci')
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
